# mole

./: .gitignore  CMakeCache.txt  CMakeLists copy.txt  CMakeLists.txt  CMakeLists_LCYMOdified.txt  GPt_CMakeLists.txt  README  README.md  devlog.md  do_release  header.cpp  install.md  testCDPM.sh
src/Temporary/: CMakeLists.txt  clamp  clamp.C  oofemcfg.h  principalValues  principalValues.C  principal_values  principal_values.C
src/oofemlib/: CMakeLists.txt  activebc.h  activedof.C  assemblercallback.C  assemblercallback.h  bctracker.C  bodyload.h  boundarycondition.C  boundaryload.C  boundaryload.h  calculatorfunction.h  calmls.C  chartype.h  classfactory.C  classfactory.h  cltypes.C  cltypes.h  combuff.C  communicator.C  compcol.C  compcol.h  connectivitytable.C  constantedgeload.C  constantsurfaceload.C  datastream.C  deadweight.C  dictionary.C  dictionary.h  dof.C  dofdistributedprimaryfield.C  dofmanvalfield.C  dofmanvalfield.h  domain.C  domain.h  domaintransactionmanager.C  dummylocalizer.C  dynamicdatareader.C  dynamicinputrecord.C  dynamicrelaxationsolver.C  eigenvectorprimaryfield.C  (+224 more)
src/oofemlib/arrays/: floatarray.C  floatarray.h  floatarrayf.h  floatmatrix.C  floatmatrix.h  floatmatrixf.h  intarray.C  intarray.h  intarrayf.h
src/oofemlib/bc/: activebc.h  bcgeomtype.h  bctracker.C  bctracker.h  bctype.h  bcvaltype.h  bodyload.h  boundarycondition.C  boundarycondition.h  boundaryload.C  boundaryload.h  constantedgeload.C  constantedgeload.h  constantsurfaceload.C  constantsurfaceload.h  deadweight.C  deadweight.h  generalboundarycondition.C  generalboundarycondition.h  initialcondition.C  initialcondition.h  initmodule.C  initmodule.h  linearconstraintbc.C  linearconstraintbc.h  linearedgeload.C  linearedgeload.h  load.C  load.h  mixedgradientpressurebc.C  mixedgradientpressurebc.h  mixedgradientpressuredirichlet.C  mixedgradientpressuredirichlet.h  mixedgradientpressureneumann.C  mixedgradientpressureneumann.h  mixedgradientpressureweakperiodic.C  mixedgradientpressureweakperiodic.h  neumannmomentload.C  neumannmomentload.h  nodalload.C  (+28 more)
src/oofemlib/contact/: contactdefinition.C  contactdefinition.h  contactelement.C  contactelement.h  contactmanager.C  contactmanager.h
src/oofemlib/cs/: crosssection.C  crosssection.h  dummycrosssection.C  dummycrosssection.h  emptycs.C  emptycs.h
src/oofemlib/dofman/: activedof.C  activedof.h  dof.C  dof.h  dofmanager.C  dofmanager.h  dofmantransftype.h  dofmanvalfield.C  dofmanvalfield.h  doftype.h  elementinternaldofman.C  elementinternaldofman.h  elementside.C  elementside.h  generalslavenode.C  generalslavenode.h  hangingnode.C  hangingnode.h  latticedirichletcouplingnode.C  latticedirichletcouplingnode.h  latticeneumanncouplingnode.C  latticeneumanncouplingnode.h  masterdof.C  masterdof.h  node.C  node.h  qcnode.C  qcnode.h  rigidarmnode.C  rigidarmnode.h  simpleslavedof.C  simpleslavedof.h  slavedof.C  slavedof.h  slavenode.C  slavenode.h  unknowntype.h
src/oofemlib/dofs/: activedof.C  activedof.h  dof.C  dof.h  dofiditem.h  dofmanvalfield.C  dofmanvalfield.h  doftype.h  masterdof.C  masterdof.h  simpleslavedof.C  simpleslavedof.h  slavedof.C  slavedof.h
src/oofemlib/engng/: classfactory.C  classfactory.h  dummyengngm.C  dummyengngm.h  engngm.C  engngm.h  staggeredproblem.C  staggeredproblem.h
src/oofemlib/error/: error.C  error.h  errorestimator.C  errorestimator.h  errorestimatortype.h  meshqualityerrorestimator.C  meshqualityerrorestimator.h  oofem_terminate.h
src/oofemlib/export/: datastream.C  datastream.h  errorcheckingexportmodule.C  errorcheckingexportmodule.h  exportmodule.C  exportmodule.h  exportmodulemanager.C  exportmodulemanager.h  exportregion.C  exportregion.h  gpexportmodule.C  gpexportmodule.h  homexportmodule.C  homexportmodule.h  homexportmodule_C  homexportmodule_h  matlabexportmodule.C  matlabexportmodule.h  outputexportmodule.C  outputexportmodule.h  outputmanager.C  outputmanager.h  solutionstatusexportmodule.C  solutionstatusexportmodule.h  vtkbaseexportmodule.C  vtkbaseexportmodule.h  vtkexportmodule.C  vtkexportmodule.h  vtkhdf5exportmodule.C  vtkhdf5exportmodule.h  vtkmemoryexportmodule.C  vtkmemoryexportmodule.h  vtkpfemexportmodule.C  vtkpfemexportmodule.h  vtkxfemexportmodule.C  vtkxfemexportmodule.h  vtkxmlexportmodule.C  vtkxmlexportmodule.h  vtkxmllatticeexportmodule.C  vtkxmllatticeexportmodule.h  (+3 more)
src/oofemlib/fei/: fei1dhermite.C  fei1dhermite.h  fei1dlin.C  fei1dlin.h  fei1dquad.C  fei1dquad.h  fei2dlinehermite.C  fei2dlinehermite.h  fei2dlinelin.C  fei2dlinelin.h  fei2dlinequad.C  fei2dlinequad.h  fei2dquadbiquad.C  fei2dquadbiquad.h  fei2dquadconst.C  fei2dquadconst.h  fei2dquadlin.C  fei2dquadlin.h  fei2dquadquad.C  fei2dquadquad.h  fei2dtrconst.C  fei2dtrconst.h  fei2dtrconst_C  fei2dtrconst_h  fei2dtrlin.C  fei2dtrlin.h  fei2dtrquad.C  fei2dtrquad.h  fei3dhexaconst.C  fei3dhexaconst.h  fei3dhexalin.C  fei3dhexalin.h  fei3dhexaquad.C  fei3dhexaquad.h  fei3dhexatriquad.C  fei3dhexatriquad.h  fei3dlinelin.C  fei3dlinelin.h  fei3dquadlin.C  fei3dquadlin.h  (+20 more)
src/oofemlib/fields/: dofdistributedprimaryfield.C  dofdistributedprimaryfield.h  eigenvectorprimaryfield.C  eigenvectorprimaryfield.h  field.C  field.h  fieldmanager.C  fieldmanager.h  intvarfield.C  intvarfield.h  maskedprimaryfield.C  maskedprimaryfield.h  primaryfield.C  primaryfield.h  uniformgridfield.C  uniformgridfield.h
src/oofemlib/func/: calculatorfunction.C  calculatorfunction.h  constantfunction.C  constantfunction.h  function.C  function.h  heavisidetimefunction.C  heavisidetimefunction.h  interpolatingfunction.C  interpolatingfunction.h  localgaussianrandomfunction.C  localgaussianrandomfunction.h  peakfunction.C  peakfunction.h  periodicpiecewiselinfunction.C  periodicpiecewiselinfunction.h  piecewiselinfunction.C  piecewiselinfunction.h  scalarfunction.C  scalarfunction.h
src/oofemlib/iga/: feibspline.C  feibspline.h  feinurbs.C  feinurbs.h  feitspline.C  feitspline.h  iga.C  iga.h
src/oofemlib/iml/: diagpre.C  diagpre.h  dyncompcol.C  dyncompcol.h  dyncomprow.C  dyncomprow.h  icprecond.C  icprecond.h  (+10 more)
(+1215 files in other folders)
